--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ $(document).ready(function() {
 				//let checkDayOfWeek = newDateFormat.split(" ");
 				switch (i) { 
 					case 1:
-					$("#content").append("<div class='day' id='day" + i + "'>" + i + " <br><strong>" + newDateFormat + "</strong></div><div data='" + newDateFormat  + "' id='info" + i + "' class='inform'>Welcome to <br />Introduction to College Writing<br><br><a class='myButton' href='https://1drv.ms/w/s!AunAKdok7zx4mBesfHBBRHjZKIdh' target='_blank'>Click to read syllabus</a>");
+					$("#content").append("<div class='day' id='day" + i + "'>" + i + " <br><strong>" + newDateFormat + "</strong></div><div data='" + newDateFormat  + "' id='info" + i + "' class='inform'>Welcome to <br />Introduction to College Writing<br><br><a class='myButton' href='/syllabus/syllabus.html' target='_blank'>Click to read syllabus</a>");
 					break;
 					case 57:
 					$("#content").append("<div class='day' id='day" + i + "'>" + i + " <br><strong>" + newDateFormat + "<br>Mid-term</strong></div><div data='" + newDateFormat  + "' id='info" + i + "' class='inform'>Welcome to <br />Introduction to College Writing<br><br><button class='button' onClick='swal(\"Hello world! 57\");' id='syllabusLink'>Click to Read the Syllabus</button>");
