--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@ $(document).ready(function() {
 				//let checkDayOfWeek = newDateFormat.split(" ");
 				switch (i) { 
 					case 1:
+					case 2:
+					case 3:
+					case 4:
 					$("#content").append("<div class='day' id='day" + i + "'>" + i + " <br><strong>" + newDateFormat + "</strong></div><div data='" + newDateFormat  + "' id='info" + i + "' class='inform'>Welcome to <br />Introduction to College Writing<br><br><a class='myButton' href='/syllabus/syllabus.html' target='_blank'>Click to read syllabus</a>");
 					break;
 					case 57:
