--- a/index.html
+++ b/index.html
@@ -421,6 +421,6 @@ header {
  </div>
 
  <div id="backToTop"><a href="#bodyContainer">^</a></div> 
- <div id="popUp">Syllabus<iframe height="90%" width="100%" src="syllabus.html"></iframe><span id="closeButton"> <a class="myButton" href="#" onClick="$(this).parent().parent().hide(300)">✖</a></span></div>
+ <div id="popUp">Syllabus<iframe height="90%" width="100%" src="syllabus/syllabus.html"></iframe><span id="closeButton"> <a class="myButton" href="#" onClick="$(this).parent().parent().hide(300)">✖</a></span></div>
 </body>
 </html>
