--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Introduction to College Writing Timeline</title>
 <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
 <script src="https://momentjs.com/downloads/moment.min.js"></script>
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="https://raw.githubusercontent.com/kogmbh/ViewerJS/master/ODFViewerPlugin.js"></script>
 
 
 <script type="text/javascript">
@@ -422,5 +422,7 @@ header {
 
  <div id="backToTop"><a href="#bodyContainer">^</a></div> 
  <div id="popUp">Syllabus<iframe height="90%" width="100%" src="syllabus/syllabus.html"></iframe><span id="closeButton"> <a class="myButton" href="#" onClick="$(this).parent().parent().hide(300)">✖</a></span></div>
+
+ 
 </body>
 </html>
