--- a/pctc/pronouns/index.html
+++ b/pctc/pronouns/index.html
@@ -2,11 +2,11 @@
 <head>
 <meta charset="utf-8">
 <title>PracticeEngineer.com - Pronoun Tester</title>
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Permanent+Marker&v2">
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Special+Elite" >
-<link href='http://fonts.googleapis.com/css?family=Simonetta:400,900italic' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Permanent+Marker&v2">
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Special+Elite" >
+<link href='//fonts.googleapis.com/css?family=Simonetta:400,900italic' rel='stylesheet' type='text/css'>
 <script src="jquery.js"></script>
-<script src="http://jaysalvat.github.io/buzz/releases/latest/buzz.min.js"></script>
+<script src="//jaysalvat.github.io/buzz/releases/latest/buzz.min.js"></script>
 <script src="ui.jquery.js"></script>
 <script src="css-pop.js"></script>
 <script src="../touchpunch.js"></script>
