--- a/pctc/subverb/index.html
+++ b/pctc/subverb/index.html
@@ -1,22 +1,21 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>PracticeEngineer.com - Pronoun Tester</title>
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Permanent+Marker&v2">
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Special+Elite" >
-<link href='https://fonts.googleapis.com/css?family=Simonetta:400,900italic' rel='stylesheet' type='text/css'>
-<script src="https://apps.practiceengineer.com/subverb/jquery.js"></script>
-<script src="https://jaysalvat.github.io/buzz/releases/latest/buzz.min.js"></script>
-<script src="https://apps.practiceengineer.com/subverb/ui.jquery.js"></script>
-<script src="https://apps.practiceengineer.com/subverb/css-pop.js"></script>
-<script src="https://apps.practiceengineer.com/touchpunch.js"></script>
-<script src="https://apps.practiceengineer.com/subverb/sentencebuilder.js"></script>
-<link rel="stylesheet" type="text/css" href="https://apps.practiceengineer.com/subverb/styles.css">
+<title>PracticeEngineer.com - Subject Verb Agreement</title>
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Permanent+Marker&v2">
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Special+Elite" >
+<link href='//fonts.googleapis.com/css?family=Simonetta:400,900italic' rel='stylesheet' type='text/css'>
+<script src="jquery.js"></script>
+<script src="//jaysalvat.github.io/buzz/releases/latest/buzz.min.js"></script>
+<script src="ui.jquery.js"></script>
+<script src="css-pop.js"></script>
+<script src="../touchpunch.js"></script>
+<script src="sentencebuilder.js"></script><link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
 	<div id="header">
-    	<p><a href="http://practiceengineer.com"><font style="color: yellow;">PracticeEngineer.com</font></a> - Pronoun Tester!</p><div id="score">Score = 0 | Remaining questions = 0</div>
+    	<p><a href="I2CW"><font style="color: yellow;">College Writing</font></a> - Subject Verb Agreement!</p><div id="score">Score = 0 | Remaining questions = 0</div>
     </div>
     
     <div id="container">
