--- a/pctc/subverb/index.html
+++ b/pctc/subverb/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>PracticeEngineer.com - Subject Verb Agreement</title>
+<title>I2CW - Subject Verb Agreement</title>
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Permanent+Marker&v2">
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Special+Elite" >
 <link href='//fonts.googleapis.com/css?family=Simonetta:400,900italic' rel='stylesheet' type='text/css'>
@@ -9,7 +9,7 @@
 <script src="//jaysalvat.github.io/buzz/releases/latest/buzz.min.js"></script>
 <script src="ui.jquery.js"></script>
 <script src="css-pop.js"></script>
-<script src="../touchpunch.js"></script>
+<script src="https://raw.githubusercontent.com/furf/jquery-ui-touch-punch/master/jquery.ui.touch-punch.min.js"></script>
 <script src="sentencebuilder.js"></script><link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
