--- a/pctc/subverb/index.html
+++ b/pctc/subverb/index.html
@@ -9,7 +9,7 @@
 <script src="//jaysalvat.github.io/buzz/releases/latest/buzz.min.js"></script>
 <script src="ui.jquery.js"></script>
 <script src="css-pop.js"></script>
-<script src="https://raw.githubusercontent.com/furf/jquery-ui-touch-punch/master/jquery.ui.touch-punch.min.js"></script>
+<script src="http://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
 <script src="sentencebuilder.js"></script><link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
