--- a/pctc/spelltest/index.html
+++ b/pctc/spelltest/index.html
@@ -3,15 +3,16 @@
 <head>
 <meta charset="utf-8">
 <title>PracticeEngineer.com - Spelling Tester</title>
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Permanent+Marker&v2">
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Special+Elite" >
-<link href='https://fonts.googleapis.com/css?family=Simonetta:400,900italic' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" type="text/css" href="https://apps.practiceengineer.com/spelltest/styles.css">
-<script src="https://apps.practiceengineer.com/spelltest/jquery.js"></script>
-<script src="https://jaysalvat.github.io/buzz/releases/latest/buzz.min.js"></script>
-<script src="https://apps.practiceengineer.com/spelltest/ui.jquery.js"></script>
-<script src="https://apps.practiceengineer.com/spelltest/sentencebuilder.js"></script>
-<script src="https://apps.practiceengineer.com/spelltest/touchpunch.js"></script>
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Permanent+Marker&v2">
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Special+Elite" >
+<link href='//fonts.googleapis.com/css?family=Simonetta:400,900italic' rel='stylesheet' type='text/css'>
+<script src="jquery.js"></script>
+<script src="//jaysalvat.github.io/buzz/releases/latest/buzz.min.js"></script>
+<script src="ui.jquery.js"></script>
+<script src="css-pop.js"></script>
+<script src="//code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
+<script src="sentencebuilder.js"></script>
+<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
