--- a/pctc/spelltest/index.html
+++ b/pctc/spelltest/index.html
@@ -2,14 +2,13 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>PracticeEngineer.com - Spelling Tester</title>
+<title>I2CW - Spelling Tester</title>
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Permanent+Marker&v2">
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Special+Elite" >
 <link href='//fonts.googleapis.com/css?family=Simonetta:400,900italic' rel='stylesheet' type='text/css'>
 <script src="jquery.js"></script>
 <script src="//jaysalvat.github.io/buzz/releases/latest/buzz.min.js"></script>
 <script src="ui.jquery.js"></script>
-<script src="css-pop.js"></script>
 <script src="//code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
 <script src="sentencebuilder.js"></script>
 <link rel="stylesheet" type="text/css" href="styles.css">
