Made changes to title and links.

--- a/pctc/pronouns/index.html
+++ b/pctc/pronouns/index.html
@@ -16,7 +16,7 @@
 
 <body>
 	<div id="header">
-    	<p><a href="http://practiceengineer.com"><font style="color: yellow;">PracticeEngineer.com</font></a> - Pronoun Tester!</p><div id="score">Score = 0 | Remaining questions = 0</div>
+    	<p><a href="https://I2CW.github.io"><font style="color: yellow;">I2CW.github.io</font></a> - Pronoun Tester!</p><div id="score">Score = 0 | Remaining questions = 0</div>
     </div>
     
     <div id="container">
