--- a/pctc/spelltest/index.html
+++ b/pctc/spelltest/index.html
@@ -18,7 +18,7 @@
   
 
 	<div id="header">
-    	<p><a href="https://practiceengineer.com">PracticeEngineer.com</a> - Spelling Tester!</p><div id="score">Score = 0</div>
+    	<p><a href="https://I2CW.github.io">I2CW.github.io</a> - Spelling Tester!</p><div id="score">Score = 0</div>
     </div>
     
     <div id="container">
