--- a/pctc/titles/index.html
+++ b/pctc/titles/index.html
@@ -1,23 +1,23 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>PracticeEngineer.com - Pronoun Tester</title>
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Permanent+Marker&v2">
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Special+Elite" >
-<link href='http://fonts.googleapis.com/css?family=Simonetta:400,900italic' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" type="text/css" href="styles.css">
+<title>I2CW - Titles Tester</title>
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Permanent+Marker&v2">
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Special+Elite" >
+<link href='//fonts.googleapis.com/css?family=Simonetta:400,900italic' rel='stylesheet' type='text/css'>
 <script src="jquery.js"></script>
-<script src="http://jaysalvat.github.io/buzz/releases/latest/buzz.min.js"></script>
-<script src="global.js"></script>
+<script src="//jaysalvat.github.io/buzz/releases/latest/buzz.min.js"></script>
 <script src="ui.jquery.js"></script>
+<script src="//code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
 <script src="sentencebuilder.js"></script>
 <script src="css-pop.js"></script>
 <script src="../touchpunch.js"></script>
+<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
 	<div id="header">
-    	<p><a href="http://practiceengineer.com"><font style="color: yellow;">PracticeEngineer.com</font></a> - Pronoun Tester!</p><div id="score">Score = 0 | Remaining questions = 0</div>
+    	<p><a href="I2CW.github.io"><font style="color: yellow;">I2CW.github.io</font></a> - Pronoun Tester!</p><div id="score">Score = 0 | Remaining questions = 0</div>
     </div>
     
     <div id="container">
