--- a/pctc/titles/index.html
+++ b/pctc/titles/index.html
@@ -17,7 +17,7 @@
 
 <body>
 	<div id="header">
-    	<p><a href="I2CW.github.io"><font style="color: yellow;">I2CW.github.io</font></a> - Pronoun Tester!</p><div id="score">Score = 0 | Remaining questions = 0</div>
+    	<p><a href="I2CW.github.io"><font style="color: yellow;">I2CW.github.io</font></a> - Titles Tester!</p><div id="score">Score = 0 | Remaining questions = 0</div>
     </div>
     
     <div id="container">
