changes to links

--- a/pctc/titles/index.html
+++ b/pctc/titles/index.html
@@ -11,7 +11,7 @@
 <script src="//code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
 <script src="sentencebuilder.js"></script>
 <script src="css-pop.js"></script>
-<script src="../touchpunch.js"></script>
+<script src="../spelltest/touchpunch.js"></script>
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
