--- a/pctc/index.html
+++ b/pctc/index.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>PracticeEngineer.com - Engineering practice for efficiency</title>
 <meta name="keywords" content="Michael Langdon, learningengineer, learning engineer, elegantsolution, learning, education, metacognition, Web usability, user interface design, discount usability engineering, user testing, heuristic evaluation, hypertext, website design, UI, GUI, HCI, CHI, UCD, user-centered design, human-computer interaction">
 <meta name="description" content="Practice Engineer is devoted to making learning more efficient by utilizing the latest research to improve learning methods.">
- <link href='//fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic|Special+Elite' rel='stylesheet' type='text/css'>
-<link href="learninengineer.css" rel="stylesheet" type="text/css" />
+ <link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic|Special+Elite' rel='stylesheet' type='text/css'>
+<link href="http://learningengineer.altervista.org/learninengineer.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -15,53 +15,52 @@
 <div class="container">
  <div class="header"><table width="100%" border="0" cellspacing="1" cellpadding="1">
   <tr>
-    <td width="9%" rowspan="2" valign="top"><img src="assets/lelogo.png" width="68" height="63" align="top" /></td>
-    <td width="91%" height="40" align="left" valign="bottom"> PracticeEngineer.com</td>
+    <td width="9%" rowspan="2" valign="top"><img src="../assets/lelogo.jpg" width="68" height="63" align="top" /></td>
+    <td width="91%" height="40" align="left" valign="bottom"> LearningEngineer.com</td>
   </tr>
   <tr>
-    <td align="left" valign="top"><font size="3">engineering practice for efficiency</font></td>
+    <td align="left" valign="top"><font size="3">engineering learning for efficiency</font></td>
   </tr>
 </table>
 
   <!-- end .header --></div>
   <div class="sidebar1">
     <ul class="nav">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="codiad/workspace/practice/icw/index.html">Intro to College Writing</a></li>
-      <li><a href="http://youtube.com/elegantsolution">Videos</a></li>
-      <li><a href="http://apps.practiceengineer.com/subverb/index.html">Subject/Verb Tester</a></li>
-	  <li><a href="http://apps.practiceengineer.com/punctest/index.html">Punctuation Tester</a></li>
-	  <li><a href="http://apps.practiceengineer.com/pronouns/index.html">Pronoun Tester</a></li>
-	  <li><a href="http://apps.practiceengineer.com/sentences/index.html">Run-on Sentence Tester</a></li>
-	  <li><a href="http://apps.practiceengineer.com/spelltest/index.html">Spelling Tester</a></li>
-	  <li><a href="http://slides.practiceengineer.com">Writing Slides</a></li>
-			 <li><a href="http://apps.practiceengineer.com/writer/index.html">Essay Writer</a></li>
-			 <li><a href="http://apps.practiceengineer.com/essaywriter/index.html">Easy Essay Writer</a></li>
-			 <li><a href="http://apps.practiceengineer.com/typing.html">Text Animation</a></li>
-			 <li><a href="http://apps.practiceengineer.com/chpd/index.html">Speech Assistant Demo</a></li>
+
+      <li><a href="../index.html">Home</a></li>
+	  <li><a href="index.html">Practice Links</a></li>
+	  <li><a href="spelltest/">Spelling Tester</a></li>
+	  <li><a href="pickapart/">Pick the Part of Speech</a></li>
+	  <li><a href="pronouns/">Pronoun</a></li>
+	  <li><a href="punctest/">Punctuation</a></li>
+	  <li><a href="subverb/">Subject Verb Agreement</a></li>
+      <li><a href="../courses.html">Courses</a></li>
+      <li><a href="http://youtube.com/elegantsolution">YouTube Videos</a></li>
+      <li><a href="../video/">Course Videos</a></li>
+	  <li><a href="../print.html">Print Materials</a></li>
+       <li><a href="../sbjctgds.html">Subject Guides</a></li>
+    <li><a href="../rvlslds/">Slides</a></li>
+      <li><a href="../games.html">Games</a></li>
+      <li><a href="../downloads.html">Downloads</a></li>
+      <li><a href="../freeapps.html">Free Applications</a>    <!-- end .sidebar1 --></li>
     </ul>
+
   </div>
   <div class="content">
     <h1>Courses</h1>
-    <p><a href="http://apps.practiceengineer.com/spelltest/index.html">Spelling Tester</a><br />
+    <p><a href="spelltest/index.html">Spelling Tester</a><br />
       Practice your spelling here. <br/>
-	  <p><a href="http://apps.practiceengineer.com/subverb/index.html">Subject Verb Agreement Tester</a><br />
+	  <p><a href="subverb/index.html">Subject Verb Agreement Tester</a><br />
       Practice knowledge of subject verb agreement. <br/>
-	  <p><a href="http://apps.practiceengineer.com/punctest/index.html">Punctuation Tester</a><br />
-      Practice knowledge of punctuation. <br/>
-	  <p><a href="http://apps.practiceengineer.com/pronouns/index.html">Pronoun Tester</a><br />
-      Practice knowledge of pronouns. <br/>
-	  <p><a href="http://apps.practiceengineer.com/sentences/index.html">Run-on Sentence Tester</a><br />
-      Practice knowledge of fixing run-on sentences. <br/>
-      <p><a href="http://apps.practiceengineer.com/pickapart/index.html">Pick-a-Part of Speech</a><br />
-      Find the parts of speech in a sentence.<br/>
-      <p><a href="http://apps.practiceengineer.com/titles/index.html">Titles Tester</a><br />
-      Decide if the title should be italicized or have quotes around it.<br/>
-      <p><a href="http://apps.practiceengineer.com/verbs/index.html">Verb Tense and Irregular Verb Tester</a><br />
-      Practice your knowledge of verb tense and irregular verbs.<br/>
+	  <p><a href="punctest/index.html">Punctuation Tester</a><br />
+      Practice knowledge of subject verb agreement. <br/>
+	  <p><a href="pronouns/index.html">Pronoun Tester</a><br />
+      Practice knowledge of subject verb agreement. <br/>
+	  <p><a href="sentences/index.html">Run-on Sentence Tester</a><br />
+      Practice knowledge of subject verb agreement. <br/>
 	  
     <!-- end .content --></p>
-  </div> 
+  </div>
   <div class="sidebar2">
   <h4>What is PracticeEngineer.com</h4>
     <p>LearningEngineer is a non-profit devoted to creating educational materials that promote learning, science, and reason. </p>
