--- a/pctc/index.html
+++ b/pctc/index.html
@@ -15,37 +15,15 @@
 <div class="container">
  <div class="header"><table width="100%" border="0" cellspacing="1" cellpadding="1">
   <tr>
-    <td width="9%" rowspan="2" valign="top"><img src="../assets/lelogo.jpg" width="68" height="63" align="top" /></td>
-    <td width="91%" height="40" align="left" valign="bottom"> LearningEngineer.com</td>
+    <td width="91%" height="40" align="left" valign="bottom">I2CW.github.io</td>
   </tr>
   <tr>
-    <td align="left" valign="top"><font size="3">engineering learning for efficiency</font></td>
+    <td align="left" valign="top"><font size="3">Introduction to College Writing</font></td>
   </tr>
 </table>
 
   <!-- end .header --></div>
-  <div class="sidebar1">
-    <ul class="nav">
-
-      <li><a href="../index.html">Home</a></li>
-	  <li><a href="index.html">Practice Links</a></li>
-	  <li><a href="spelltest/">Spelling Tester</a></li>
-	  <li><a href="pickapart/">Pick the Part of Speech</a></li>
-	  <li><a href="pronouns/">Pronoun</a></li>
-	  <li><a href="punctest/">Punctuation</a></li>
-	  <li><a href="subverb/">Subject Verb Agreement</a></li>
-      <li><a href="../courses.html">Courses</a></li>
-      <li><a href="http://youtube.com/elegantsolution">YouTube Videos</a></li>
-      <li><a href="../video/">Course Videos</a></li>
-	  <li><a href="../print.html">Print Materials</a></li>
-       <li><a href="../sbjctgds.html">Subject Guides</a></li>
-    <li><a href="../rvlslds/">Slides</a></li>
-      <li><a href="../games.html">Games</a></li>
-      <li><a href="../downloads.html">Downloads</a></li>
-      <li><a href="../freeapps.html">Free Applications</a>    <!-- end .sidebar1 --></li>
-    </ul>
-
-  </div>
+  
   <div class="content">
     <h1>Courses</h1>
     <p><a href="spelltest/index.html">Spelling Tester</a><br />
@@ -61,12 +39,9 @@
 	  
     <!-- end .content --></p>
   </div>
-  <div class="sidebar2">
-  <h4>What is PracticeEngineer.com</h4>
-    <p>LearningEngineer is a non-profit devoted to creating educational materials that promote learning, science, and reason. </p>
-    </div>
+ 
   <div class="footer">
-    <p>Copyright 2013 All rights reserved - LearningEngineer.com</p>
+    <p>Copyright 2019 All rights reserved - Michael Frank Langdon</p>
     <!-- end .footer --></div>
   <!-- end .container --></div>
 </body>
