--- a/index.html
+++ b/index.html
@@ -1,46 +1,49 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Introduction to College Writing Timeline</title>
-<script src="https://code.jquery.com/jquery-1.11.3.js"></script>
-<script src="https://momentjs.com/downloads/moment.min.js"></script>
-<script src="js/timeline.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Caveat|Indie+Flower|Special+Elite" rel="stylesheet">
-<link href="js/timeline.css" rel="stylesheet"> 
- 
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>PracticeEngineer.com - Engineering practice for efficiency</title>
+<meta name="keywords" content="Michael Langdon, learningengineer, learning engineer, elegantsolution, learning, education, metacognition, Web usability, user interface design, discount usability engineering, user testing, heuristic evaluation, hypertext, website design, UI, GUI, HCI, CHI, UCD, user-centered design, human-computer interaction">
+<meta name="description" content="Practice Engineer is devoted to making learning more efficient by utilizing the latest research to improve learning methods.">
+ <link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic|Special+Elite' rel='stylesheet' type='text/css'>
+<link href="http://learningengineer.altervista.org/learninengineer.css" rel="stylesheet" type="text/css" />
 </head>
-<body id="bodyContainer">
-	<header id="header" class="header">
-		<h1>
-			<span class="title">Introduction to College Writing Timeline</span>
-		</h1>
-		<span id="dateButtons">
-			<a href="#" id="mon9" class="myButton">Mon 9 to Noon</a>
-			<a href="#" class="myButton" id="monWed1">Mon and Wed 1 - 2:30pm</a>
-			<a href="#" class="myButton" id="tuesNight">Tue Night</a>
-			<a href="#" class="myButton" id="wed9">Wed 9 to Noon</a>
-			<a href="#" class="myButton" id="thuNight">Thu Night</a>
-			<a href="#" class="myButton" id="showAll">Show all dates</a>
-			<a href="#" class="myButton" id="ShowAllDocs" onClick="$(this).parent().next().slideDown(300)">more</a>
-		</span>
-		<div id="linkButtons"> 
-			<a class="myButton" href="#" onClick="popUpApp('syllabus');">Syllabus</a>
-			<a class="myButton" href="#" onClick="popUpApp('writingbook');">Writing Book for Beginners</a>
-			<a href="#" onClick="$(this).parent().slideUp(300);" class="myButton" id="close">✖</a>
-</div>
-</header>
-<div id="container">
- <div id="content">
- </div>
- 
-</div>
- </div>
 
- <div id="backToTop"><a href="#bodyContainer">^</a></div> 
- <div id="popUp"></div>
- 
+<body>
 
+<div class="container">
+ <div class="header"><table width="100%" border="0" cellspacing="1" cellpadding="1">
+  <tr>
+    <td width="91%" height="40" align="left" valign="bottom">I2CW.github.io</td>
+  </tr>
+  <tr>
+    <td align="left" valign="top"><font size="3">Introduction to College Writing</font></td>
+  </tr>
+</table>
+
+  <!-- end .header --></div>
+  
+  <div class="content">
+    <h2><a href="tl.html">Class Timeline - Experimental</a></h2>
+    <h2><a href="pctc/index.html">Practice</a></h2>
+    <p><a href="pctc/spelltest/index.html">Spelling Tester</a><br />
+      Practice your spelling here. <br/>
+	  <p><a href="pctc/subverb/index.html">Subject Verb Agreement Tester</a><br />
+      Practice knowledge of subject verb agreement. <br/>
+	  <p><a href="pctc/punctest/index.html">Punctuation Tester</a><br />
+      Practice knowledge of subject verb agreement. <br/>
+	  <p><a href="pctc/pronouns/index.html">Pronoun Tester</a><br />
+      Practice knowledge of subject verb agreement. <br/>
+	  <p><a href="pctc/sentences/index.html">Run-on Sentence Tester</a><br />
+      Practice knowledge of subject verb agreement. <br/>
+	  
+    <!-- end .content --></p>
+  </div>
  
+  <div class="footer">
+    <p>Copyright 2019 All rights reserved - Michael Frank Langdon</p>
+    <!-- end .footer --></div>
+  <!-- end .container --></div>
 </body>
 </html>
