--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>PracticeEngineer.com - Engineering practice for efficiency</title>
+<title>I2CW Educational Information</title>
 <meta name="keywords" content="Michael Langdon, learningengineer, learning engineer, elegantsolution, learning, education, metacognition, Web usability, user interface design, discount usability engineering, user testing, heuristic evaluation, hypertext, website design, UI, GUI, HCI, CHI, UCD, user-centered design, human-computer interaction">
 <meta name="description" content="Practice Engineer is devoted to making learning more efficient by utilizing the latest research to improve learning methods.">
  <link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic|Special+Elite' rel='stylesheet' type='text/css'>
