--- a/pctc/index.html
+++ b/pctc/index.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="Michael Langdon, learningengineer, learning engineer, elegantsolution, learning, education, metacognition, Web usability, user interface design, discount usability engineering, user testing, heuristic evaluation, hypertext, website design, UI, GUI, HCI, CHI, UCD, user-centered design, human-computer interaction">
 <meta name="description" content="Practice Engineer is devoted to making learning more efficient by utilizing the latest research to improve learning methods.">
  <link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic|Special+Elite' rel='stylesheet' type='text/css'>
-<link href="http://learningengineer.altervista.org/learninengineer.css" rel="stylesheet" type="text/css" />
+<link href="../css/learninengineer.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
