--- a/index.html
+++ b/index.html
@@ -30,14 +30,18 @@
     <p><a href="pctc/spelltest/index.html">Spelling Tester</a><br />
       Practice your spelling here. <br/>
 	  <p><a href="pctc/subverb/index.html">Subject Verb Agreement Tester</a><br />
-      Practice knowledge of subject verb agreement. <br/>
+      Practice knowledge of subject verb agreement by selecting the verb that best matches the subject.  <br/>
 	  <p><a href="pctc/punctest/index.html">Punctuation Tester</a><br />
-      Practice knowledge of subject verb agreement. <br/>
+      Practice knowledge of punctuation by picking the punctuation that fits best within a sentence. <br/>
 	  <p><a href="pctc/pronouns/index.html">Pronoun Tester</a><br />
-      Practice knowledge of subject verb agreement. <br/>
+      Practice knowledge of pronouns by selecting the correct pronoun for each sentence presented. <br/>
 	  <p><a href="pctc/sentences/index.html">Run-on Sentence Tester</a><br />
-      Practice knowledge of subject verb agreement. <br/>
-	  
+      Practice knowledge of fixing run-on sentences by selecting the sentence that best fixes the run-on sentence supplied.. <br/>
+      <p><a href="pctc/titles/index.html">Titles Tester</a><br />
+        Practice knowledge of titles choosing whether the titles would be put in quotation marks or <i>italicized</i>.<br/>
+        <p><a href="pctc/revealslides/index.html">Writing Slides</a><br />
+          Learn about writing through these slides.<br/>
+      
     <!-- end .content --></p>
   </div>
  
