added several packages

--- a/index.html
+++ b/index.html
@@ -37,10 +37,14 @@
       Practice knowledge of pronouns by selecting the correct pronoun for each sentence presented. <br/>
 	  <p><a href="pctc/sentences/index.html">Run-on Sentence Tester</a><br />
       Practice knowledge of fixing run-on sentences by selecting the sentence that best fixes the run-on sentence supplied.. <br/>
-      <p><a href="pctc/titles/index.html">Titles Tester</a><br />
+    <p><a href="pctc/titles/index.html">Titles Tester</a><br />
         Practice knowledge of titles choosing whether the titles would be put in quotation marks or <i>italicized</i>.<br/>
-        <p><a href="pctc/revealslides/index.html">Writing Slides</a><br />
+    <p><a href="pctc/revealslides/index.html">Writing Slides</a><br />
           Learn about writing through these slides.<br/>
+    <p><a href="essayexplorer/index.html">Essay Explorer</a><br />
+            Learn about writing through these slides.<br/>
+    <p><a href="essaywriter/index.html">EssayWriter</a><br />
+              Learn about writing through these slides.<br/>
       
     <!-- end .content --></p>
   </div>
