--- a/index.html
+++ b/index.html
@@ -13,14 +13,9 @@
 <body>
 
 <div class="container">
- <div class="header"><table width="100%" border="0" cellspacing="1" cellpadding="1">
-  <tr>
-    <td width="91%" height="40" align="left" valign="bottom">I2CW.github.io</td>
-  </tr>
-  <tr>
-    <td align="left" valign="top"><font size="3">Introduction to College Writing</font></td>
-  </tr>
-</table>
+ <div class="header">
+<h1 class="titke">I2CW.github.io</h1>
+<h2 class="sub-title">Introduction to College Writing</h2>
 
   <!-- end .header --></div>
   
